--- a/members.html
+++ b/members.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <div class="header__container">
-                <div class="header_logo"><a href="index.html"><img src="/HGCBCC-Members/img/HGCBCC new.png"></a></div>
+                <div class="header_logo"><a href="index.html"><img src="/img/HGCBCC new.png"></a></div>
                 <div class="header__texts">
                     <h1 class="header__title header__title-desktop"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC Members</a></h1>  
                     <h1 class="header__title header__title-mobile"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC <br> Members</a></h1>  
@@ -47,7 +47,7 @@
        
     </main>
     <footer>
-        <p>Copyright © 2021. All rights reserved</p>
+        <p>Copyright © 2022. All rights reserved</p>
         <h2> TO GOD BE THE GLORY!</h2>
     </footer>
  
