--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
                 <div class="header_logo"><a href="index.html"><img src="/img/HGCBCC new.png"></a></div>
                 <div class="header__texts">
                     <h1 class="header__title header__title-desktop"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC Members</a></h1>  
-                    <h1 class="header__title header__title-mobile"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC <br> Members</a></h1>  
-                 </div>
-                 <button class="nav-toggle" id="nav-toggle"><a class="nav-show" >&#9776</a></button>
-                </div>
+                    <h1 class="header__title header__title-mobile"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC Members</a></h1>  
         </div>
     </header>
     <section class="filter-section" id="top">
