--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="header__container">
                 <div class="header_logo"><a href="https://heraldofgraceliterature.wordpress.com/"><img src="/img/HGCBCC new.png"></a></div>
                 <div class="header__texts">
-                    <h1 class="header__title header__title-desktop"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC Members</a></h1>  
-                    <h1 class="header__title header__title-mobile"><a href="https://www.facebook.com/salitranreformed" target="_blank">HGCBCC Members</a></h1>  
+                    <h1 class="header__title header__title-desktop"><a href="https://www.facebook.com/heraldofgracecavite" target="_blank">HGCBCC Members</a></h1>  
+                    <h1 class="header__title header__title-mobile"><a href="https://www.facebook.com/heraldofgracecavite" target="_blank">HGCBCC Members</a></h1>  
         </div>
     </header>
     <section class="filter-section" id="top">
