--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     
                         <input class="search-input" type="text" id="searchButton" placeholder="Search members (name, year)...">                     
                         <div>  <button class="clear-button" id="clear-result">Clear</button></div>
-                        <div><button id="quick-list">List</button></div>
+                        <div><button id="quick-list"><a href="/list.html">List</a></button></div>
                     </div>
           
         </div>
