--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container" >
                 <div class="filter-options">           
                         <input class="search-input" type="text" id="searchButton" placeholder="Search members (name, year)...">                     
-                        <div>  <button class="clear-button" id="clear-result">Clear</button></div>
+                        <div>  <button class="reset" id="reset" type="reset" >Reset</button></div>
                         <div><button id="quick-list">List</button></div>
                         <div><button id="sort-list">Sort</button></div>
                     </div>
