--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <div class="filter-options">           
                         <input class="search-input" type="text" id="searchButton" placeholder="Search members (name, year)...">                     
                         <div>  <button class="reset" id="reset" type="reset" >Reset</button></div>
-                        <div><button id="quick-list">List</button></div>
-                        <div><button id="sort-list">Sort</button></div>
+                        <div><button id="quick-list" type="button">List</button></div>
+                        <div><button id="sort-list" type="button">Sort</button></div>
                     </div>
           
         </div>
