--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
     <section class="filter-section" id="top">
         <div class="container" >
                 <div class="filter-options">           
-                        <input class="search-input" type="text" id="searchButton" placeholder="Search members (name, year)...">                     
+                        <input class="search-input" type="text" id="searchButton" placeholder="Search members (name, year)...">   
+                </div>                  
                         <div>  <button class="reset" id="reset" type="reset" >Reset</button></div>
                         <div><button id="quick-list" type="button">List</button></div>
-                        <div><button id="sort-list" type="button">Sort</button></div>
-                    </div>
-          
+                        <!-- <div><button id="sort-list" type="button">Sort</button></div> -->
+                        <div>
+                            <label for="sorting" class="sorting">Sort by:</label>
+                        </div>
         </div>
     </section>
     <main class="main-members">
