--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="toolbar">
             <div class="filter-section" id="top">
                         <div class="search-bar">
-                                <input class="search-input" type="text" id="searchButton" placeholder="Search members">
+                                <input class="search-input" type="text" id="searchInput" placeholder="Search members">
                         </div>
                                 <div>  <button class="reset" id="reset" type="reset" >Reset</button></div>
                                 <div><button id="quick-list" type="button">List</button></div>
