--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="sorting">
                 <label for="sort-list" class="sort-label">Sort by:</label>
-                <select class="sort-options" id="sort-list">
+                <select class="sort-options" id="sort-list" default=" ">
                     <option value="firstName">First Name</option>
                     <option value="lastName">Last Name</option>
                     <option value="date">Date</option>
