--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         <div class="container">
             <div class="row" id="row">
             </div>
+            <div class="image-modal"></div>
         </div>       
        
     </main>
